F&GDEV/src/objects/Product_to_Plan_Code_Association__c.object
<CustomObject>
    <fields>
        <fullName>Plan_Code_Option_Code__c</fullName>
        <description>Formula field added to simplify Plan Code merging in DrawLoop Product Spec Document.</description>
        <formula>Plan_Code__r.Plan_Code_Option_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Code Option Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Code__c</fullName>
        <label>Plan Code</label>
        <referenceTo>PD_Plan_Code__c</referenceTo>
        <relationshipLabel>Product</relationshipLabel>
        <relationshipName>Product_to_Plan_Code_Association</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Specs__c</fullName>
        <label>Product Specs</label>
        <referenceTo>Product_Specification__c</referenceTo>
        <relationshipLabel>Plan Code</relationshipLabel>
        <relationshipName>Product_to_Plan_Code_Association</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Product to Plan Code Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCA-{0000}</displayFormat>
        <label>Product to Plan Code Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product to Plan Code Association</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>